2005-12-08  Mark McLoughlin  <mark@skynet.ie>

	Add GMENU_TREE_FLAGS_INCLUDE_NODISPLAY, gmenu_tree_entry_get_nodisplay()
	and gmenu_tree_directory_get_nodisplay() in order to allow fix for
	bug #323476

	* libmenu/gmenu-tree.[ch]:
	(gmenu_tree_directory_get_is_nodisplay),
	(gmenu_tree_entry_get_is_nodisplay): add new API
	(gmenu_tree_directory_new),
	(gmenu_tree_entry_new): add is_nodisplay flag on entries
	and directories
	(entries_listify_foreach),
	(excluded_entries_listify_foreach): set the flag here
	(process_layout): don't remove if is_nodisplay and the
	INCLUDE_NODISPLAY tree flag is set.

	* util/test-menu-spec.c: (main): add -n arg to allow
	testing.

2005-11-01  Kjartan Maraas  <kmaraas@gnome.org>

	* libmenu/gmenu-tree.c: (gmenu_tree_execute_moves):
	* libmenu/menu-layout.c: (fixup_move_node): Remove some
	unused code. Closes bug #320093.

2005-10-31  Simos Xenitellis  <simos@gnome.org>

	* configure.in: Added ky (Kirghiz) to ALL_LINGUAS.

2005-10-27  Erdal Ronahi <erdal.ronahi@gmail.com>
	* configure.in: Added "ku" (Kurdish) to ALL_LINGUAS.

2005-10-14  Abduxukur Abdurixit <abdurixit@gmail.com>
	* configure.in: Added "ug" (Uighur) to ALL_LINGUAS.

2005-10-01  Runa Bhattacharjee <runa@bengalinux.org>
	* configure.in: Added "bn" (Bengali) to ALL_LINGUAS.

2005-09-30  Mark McLoughlin  <mark@skynet.ie>

	Hopefully fix issue where menus wouldn't be completely
	reloaded after a spew of file change events (#313833)
	
	Detailed analysis from Frederic Crozat <fcrozat@mandriva.com>

	* libmenu/menu-monitor.c: make the pending_events list global
	rather than per-monitor and don't try and coalesce events for
	the same path so that we can guarantee that we emit all the
	events in the same order as we receive them from FAM.

2005-09-06  Mark McLoughlin  <mark@skynet.ie>

	* configure.in: post-release bump to 2.12.1.
	
==================== 2.12.0 ====================

2005-09-06  Mark McLoughlin  <mark@skynet.ie>

	* configure.in: Version 2.12.0.
