@@ -1,5 +1,12 @@
 2005-12-08  Mark McLoughlin  <mark@skynet.ie>
 
+	Patch from The Written Word in bug #322222
+
+	* libmenu/desktop-entries.c: (desktop_entry_load): Fix incorrect
+	escaping in C format strings
+
+2005-12-08  Mark McLoughlin  <mark@skynet.ie>
+
 	Add GMENU_TREE_FLAGS_INCLUDE_NODISPLAY, gmenu_tree_entry_get_nodisplay()
 	and gmenu_tree_directory_get_nodisplay() in order to allow fix for
 	bug #323476
